--- a/dev/tasks/macros.jinja
+++ b/dev/tasks/macros.jinja
@@ -135,13 +135,11 @@ on:
   - name: Upload package to Gemfury
     shell: bash
     run: |
-      gem install gemfury
+      gem install --user-install gemfury
       path=$(ls {{ pattern }})
-      fury push ${path} --account ${CROSSBOW_GEMFURY_ORG} --api-token ${CROSSBOW_GEMFURY_TOKEN}
+      ruby arrow/ci/scripts/gemfury_upload.rb $(ls {{ pattern }})
     env:
-      CROSSBOW_GEMFURY_TOKEN: {{ '${{ secrets.CROSSBOW_GEMFURY_TOKEN }}' }}
-      CROSSBOW_GEMFURY_ORG: {{ '${{ secrets.CROSSBOW_GEMFURY_ORG }}' }}
-  {% endif %}
+      GEMFURY_API_TOKEN: {{ '${{ secrets.CROSSBOW_GEMFURY_TOKEN }}' }}
 {% endmacro %}
 
 {%- macro azure_checkout_arrow() -%}
