--- a/dev/tasks/macros.jinja
+++ b/dev/tasks/macros.jinja
@@ -140,6 +140,7 @@ on:
       ruby arrow/ci/scripts/gemfury_upload.rb $(ls {{ pattern }})
     env:
       GEMFURY_API_TOKEN: {{ '${{ secrets.CROSSBOW_GEMFURY_TOKEN }}' }}
+  {% endif %}
 {% endmacro %}
 
 {%- macro azure_checkout_arrow() -%}
