--- a/dev/tasks/macros.jinja
+++ b/dev/tasks/macros.jinja
@@ -134,11 +134,15 @@ on:
   - name: Upload package to Gemfury
     shell: bash
     run: |
+      PATH=$(ruby -r rubygems -e 'puts Gem.user_dir')/bin:$PATH
       gem install --user-install gemfury
-      path=$(ls {{ pattern }})
-      ruby arrow/ci/scripts/gemfury_upload.rb ${path}
+      fury \
+        --api-token=${CROSSBOW_GEMFURY_TOKEN} \
+        --as=${CROSSBOW_GEMFURY_ORG} \
+        {{ pattern }}
     env:
-      GEMFURY_API_TOKEN: {{ '${{ secrets.CROSSBOW_GEMFURY_TOKEN }}' }}
+      CROSSBOW_GEMFURY_TOKEN: {{ '${{ secrets.CROSSBOW_GEMFURY_TOKEN }}' }}
+      CROSSBOW_GEMFURY_ORG: {{ '${{ secrets.CROSSBOW_GEMFURY_ORG }}' }}
 {% endmacro %}
 
 {%- macro azure_checkout_arrow() -%}
