--- a/go/arrow/array/numericbuilder.gen_test.go.tmpl
+++ b/go/arrow/array/numericbuilder.gen_test.go.tmpl
@@ -51,7 +51,11 @@ func TestNew{{.Name}}Builder(t *testing.T) {
 	ab.Append(8)
 	ab.Append(9)
 	ab.Append(10)
-	ab.AppendValueFromString(11)
+	{{ if or (eq .Name "Timestamp") (eq .Name "Time32") (eq .Name "Time64") (eq .Name "Date32") (eq .Name "Date64") (eq .Name "Duration") -}}
+	ab.Append(11)
+	{{ else -}}
+	ab.AppendValueFromString("11")
+	{{ end }}
 
 	// check state of builder before New{{.Name}}Array
 	assert.Equal(t, 11, ab.Len(), "unexpected Len()")
@@ -68,7 +72,7 @@ func TestNew{{.Name}}Builder(t *testing.T) {
 	assert.Equal(t, 2, a.NullN(), "unexpected null count")
 	assert.Equal(t, []{{or .QualifiedType .Type}}{1, 2, 3, 0, 5, 6, 0, 8, 9, 10, 11}, a.{{.Name}}Values(), "unexpected {{.Name}}Values")
 	assert.Equal(t, []byte{0xb7}, a.NullBitmapBytes()[:1]) // 4 bytes due to minBuilderCapacity
-	assert.Len(t, a.{{.Name}}Values(), 10, "unexpected length of {{.Name}}Values")
+	assert.Len(t, a.{{.Name}}Values(), 11, "unexpected length of {{.Name}}Values")
 
 	a.Release()
 
