--- a/go/arrow/array/numericbuilder.gen.go.tmpl
+++ b/go/arrow/array/numericbuilder.gen.go.tmpl
@@ -239,8 +239,30 @@ func (b *{{.Name}}Builder) AppendValueFromString(s string) error {
       return err
     }
     b.Append(v)
-  {{else if (eq .Name "Duration") -}}	
-    return fmt.Errorf("%w: AppendValueFromString not implemented for Duration", arrow.ErrNotImplemented)
+  {{else if (eq .Name "Duration") -}}
+	var value arrow.Duration
+	var unitStr string
+	n, err := fmt.Sscanf(s, "%d%s", &value, &unitStr)
+	if err != nil {
+		b.AppendNull()
+		return err
+	}
+	if n != 2 {
+		b.AppendNull()
+		return fmt.Errorf("failed to parse Duration from %q", s)
+	}
+
+	// to ns & back
+	unit, err := arrow.TimeUnitFromString(unitStr)
+	if err != nil {
+		b.AppendNull()
+		return err
+	}
+
+	value *= arrow.Duration(unit.Multiplier())
+	value /= arrow.Duration(b.dtype.Unit.Multiplier())
+
+	b.Append(value)
   {{else if or (eq .Name "Int8") (eq .Name "Int16") (eq .Name "Int32") (eq .Name "Int64") -}}
     v, err := strconv.ParseInt(s, 10, {{.Size}} * 8)
     if err != nil {
@@ -262,8 +284,6 @@ func (b *{{.Name}}Builder) AppendValueFromString(s string) error {
       return err
     }
     b.Append({{.name}}(v))
-  {{else}}
-    return fmt.Errorf("%w: AppendValueFromString not implemented for {{.Name}}", ErrNotImplemented)
   {{end -}}
 	return nil
 }
