--- a/go/arrow/array/numericbuilder.gen_test.go.tmpl
+++ b/go/arrow/array/numericbuilder.gen_test.go.tmpl
@@ -79,6 +79,65 @@ func Test{{.Name}}_ValueStr(t *testing.T) {
 	}
 }
 
+func Test{{.Name}}Builder_AppendValueFromString(t *testing.T) {
+	// 1. create array
+	mem := memory.NewCheckedAllocator(memory.NewGoAllocator())
+	defer mem.AssertSize(t, 0)
+
+{{if .Opt.Parametric -}}
+{{ if or (eq .Name "Time64") -}}
+	dt := &arrow.{{.Name}}Type{Unit: arrow.Microsecond}
+{{else -}}
+	dt := &arrow.{{.Name}}Type{Unit: arrow.Second}
+{{end -}}
+	b := array.New{{.Name}}Builder(mem, dt)
+{{else -}}
+	b := array.New{{.Name}}Builder(mem)
+{{end -}}
+	defer b.Release()
+
+	b.Append(1)
+	b.Append(2)
+	b.Append(3)
+	b.AppendNull()
+	b.Append(5)
+	b.Append(6)
+	b.AppendNull()
+	b.Append(8)
+	b.Append(9)
+	b.Append(10)
+
+	arr := b.NewArray().(*array.{{.Name}})
+	defer arr.Release()
+
+	// 2. create array via AppendValueFromString
+{{if .Opt.Parametric -}}
+	b1 := array.New{{.Name}}Builder(mem, dt)
+{{else -}}
+	b1 := array.New{{.Name}}Builder(mem)
+{{end -}}
+	defer b1.Release()
+
+	for i := 0; i < arr.Len(); i++ {
+		assert.NoError(t, b1.AppendValueFromString(arr.ValueStr(i)))
+	}
+
+	arr1 := b1.NewArray().(*array.{{.Name}})
+	defer arr1.Release()
+
+	assert.Equal(t, arr.Len(), arr1.Len())
+	for i := 0; i < arr.Len(); i++ {
+		assert.Equal(t, arr.IsValid(i), arr1.IsValid(i))
+		if arr.IsValid(i) {
+{{ if or (eq .Name "Date64") -}}
+			assert.Exactly(t, arr.Value(i).ToTime(), arr1.Value(i).ToTime())
+{{else -}}
+			assert.Exactly(t, arr.Value(i), arr1.Value(i))
+{{end -}}
+		}
+	}
+}
+
 func TestNew{{.Name}}Builder(t *testing.T) {
 	mem := memory.NewCheckedAllocator(memory.NewGoAllocator())
 	defer mem.AssertSize(t, 0)
