--- a/dev/tasks/macros.jinja
+++ b/dev/tasks/macros.jinja
@@ -345,6 +345,7 @@ on:
             "AWS_ACCESS_KEY_ID": '${{ secrets.AWS_ACCESS_KEY_ID }}',
             "AWS_SECRET_ACCESS_KEY": '${{ secrets.AWS_SECRET_ACCESS_KEY }}',
             "SCCACHE_BUCKET": '${{ secrets.SCCACHE_BUCKET }}',
+            "SCCACHE_REGION": '${{ secrets.SCCACHE_REGION }}',
             "SCCACHE_S3_KEY_PREFIX": sccache_key_prefix 
           }
  %}
@@ -358,6 +359,7 @@ on:
             "AWS_ACCESS_KEY_ID": '$(AWS_ACCESS_KEY_ID)',
             "AWS_SECRET_ACCESS_KEY": '$(AWS_SECRET_ACCESS_KEY)',
             "SCCACHE_BUCKET": '$(SCCACHE_BUCKET)',
+            "SCCACHE_REGION": '$(SCCACHE_REGION)',
             "SCCACHE_S3_KEY_PREFIX": sccache_key_prefix 
           }
   %}
