--- a/dev/tasks/macros.jinja
+++ b/dev/tasks/macros.jinja
@@ -131,7 +131,6 @@ on:
 {% endmacro %}
 
 {%- macro github_upload_gemfury(pattern) -%}
-  {%- if arrow.is_default_branch() -%}
   - name: Set up Ruby by apt
     if: runner.os == 'Linux' && runner.arch != 'X64'
     run: |
@@ -142,14 +141,13 @@ on:
     run: |
       PATH=$(echo $(ruby -r rubygems -e 'puts Gem.user_dir') | sed "s/C:\//\/c\//")/bin:$PATH
       gem install --user-install gemfury
-      fury \
+      fury push \
         --api-token=${CROSSBOW_GEMFURY_TOKEN} \
         --as=${CROSSBOW_GEMFURY_ORG} \
         {{ pattern }}
     env:
       CROSSBOW_GEMFURY_TOKEN: {{ '${{ secrets.CROSSBOW_GEMFURY_TOKEN }}' }}
       CROSSBOW_GEMFURY_ORG: {{ '${{ secrets.CROSSBOW_GEMFURY_ORG }}' }}
-  {% endif %}
 {% endmacro %}
 
 {%- macro azure_checkout_arrow() -%}
